--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vite": "^6.1.0"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.3",
     "howler": "^2.2.4",
     "konva": "^9.3.18"
   }
